--- a/recruitment/templates/recruitment/requests.html
+++ b/recruitment/templates/recruitment/requests.html
@@ -3,13 +3,25 @@
 {% block title %}Рекруты{% endblock %}
 
 {% block content %}
+
+    <style>
+        table, td {
+            border: 1px solid black;
+        }
+    </style>
+
     <table>
         <thead>
+        <tr>
+            <td>Ифнормация о рекрутёрах</td>
+            <td colspan="{{ questions|length }}">Ответы на вопросы</td>
+        </tr>
         <tr>
             <td>Имя</td>
             {% for question in questions %}
                 <td>{{ question.order }}</td>
             {% endfor %}
+            <td>Рука тени?</td>
         </tr>
         </thead>
 
@@ -20,6 +32,13 @@
                 {% for answer in answers %}
                     <td>{{ answer.answer }}</td>
                 {% endfor %}
+                <td>
+                    <form action="{% url 'shadow_hand' %}" method="post">
+                        {% csrf_token %}
+                        <input type="number" name="recruit_id" value="{{ recruit.id }}" hidden>
+                        <input type="submit" value="Сделать Рукой Тени">
+                    </form>
+                </td>
             </tr>
         {% endfor %}
         </tbody>
